--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -10,11 +10,14 @@ h3 {
 }
 
 .court-wrapper {
-  perspective: 100vw;
+  perspective: 400px;
   position: relative;
-  margin: auto;
-  width: 50vw;
-  height: 80vw;
+  /* margin: auto; */
+  width: 100%;
+  height: 100%;
+  /* max-width: 240px;
+  max-height: 300px; */
+  padding-top: 125%;
 }
 
 .court-main {
@@ -39,7 +42,7 @@ h3 {
 
 .court-back {
   flex: 1;
-  border: 0.5vw solid white;
+  border: 2px solid white;
 }
 
 .court-serves {
@@ -53,7 +56,7 @@ h3 {
   box-sizing: border-box;
   max-width: 50%;
   max-height: 100%;
-  border: 0.5vw solid white;
+  border: 2px solid white;
   display: flex;
   position: relative;
   justify-content: center;
@@ -77,19 +80,19 @@ h3 {
   width: 100%;
   height: 100%;
   box-sizing: border-box;
-  border: 0.5vw solid red;
+  border: 1px solid red;
 }
 
 .court-outer-border {
   position: absolute;
   box-sizing: border-box;
   pointer-events: none;
-  top: -0.5vw;
-  left: -0.5vw;
-  width: calc(100% + 1vw);
-  height: calc(100% + 1vw);
-  border: 1vw solid white;
-  border-radius: 0.4vw;
+  top: -1px;
+  left: -1px;
+  width: calc(100% + 2px);
+  height: calc(100% + px);
+  border: 2px solid white;
+  border-radius: 1px;
 }
 
 .court-net {
@@ -98,9 +101,9 @@ h3 {
   pointer-events: none;
   top: 50%;
   width: 100%;
-  height: 5vw;
+  height: 7%;
   transform: translateY(-100%);
-  border: 0.3vw solid gray;
+  border: 2px solid gray;
   border-bottom: none;
   background: rgba(200, 200, 200, 0.5);
 }
